--- a/about.html
+++ b/about.html
@@ -46,18 +46,19 @@
   
   <div class="project-glass-wrapper">
     <!-- COPERTINA -->
-    <div class="glass-box" style="display: flex; align-items: center; gap: 44px; min-height: 220px; justify-content: flex-start;">
-  <!-- Ritratto SVG -->
-  <div style="flex: 0 0 140px; display: flex; align-items: center; justify-content: center;">
-    <img src="images/portrait_me.svg" alt="Armand Lala Portrait" style="width: 120px; height: 120px; border-radius: 16px; background: rgba(30,30,60,0.07); box-shadow: 0 2px 10px rgba(30,40,60,0.13);">
+   <div class="glass-box about-cover-flex">
+  <!-- Ritratto SVG grande -->
+  <div class="about-svg-wrap">
+    <img src="images/portrait_me.svg" alt="Armand Lala Portrait" class="about-svg-big">
   </div>
   <!-- Nome + testo descrittivo -->
-  <div style="flex: 1 1 0; display: flex; flex-direction: column; align-items: flex-start; justify-content: center;">
-    <h1 class="cover-title" style="font-size:2.3em; text-align:left; margin-bottom:10px;">ARMAND LALA</h1>
-    <div style="font-size: 1.26em; font-weight: 500; color: #fff;">
+  <div class="about-cover-text">
+    <h1 class="cover-title" style="font-size:2.8em; text-align:left; margin-bottom:12px;">ARMAND LALA</h1>
+    <div style="font-size: 1.38em; font-weight: 500; color: #fff;">
       qui testo descrittivo copertina
     </div>
   </div>
+</div>
 </div>
     <!-- DESCRIZIONE -->
     <div class="glass-box">
