--- a/about.html
+++ b/about.html
@@ -46,45 +46,45 @@
   
   <div class="project-glass-wrapper">
     <!-- COPERTINA -->
-   <div class="glass-box about-cover-flex">
-  <!-- Ritratto SVG grande -->
-  <div class="about-svg-wrap">
-    <img src="images/portrait_me.svg" alt="Armand Lala Portrait" class="about-svg-big">
-  </div>
-  <!-- Nome + testo descrittivo -->
-  <div class="about-cover-text">
-    <h1 class="cover-title" style="font-size:2.8em; text-align:left; margin-bottom:12px;">ARMAND LALA</h1>
-    <div style="font-size: 1.38em; font-weight: 500; color: #fff;">
-      Master’s degree student in Architecture at the University of Florence (UNIFI) and Erasmus student at NTUA Athens.
+   <div class="project-glass-wrapper">
+  <!-- COPERTINA -->
+  <div class="glass-box cover-flex">
+    <div class="cover-svg-wrap">
+      <img src="images/portrait_me.svg" alt="Armand Lala Portrait" class="cover-svg-img">
+    </div>
+    <div class="cover-text-col">
+      <h1 class="cover-title">ARMAND LALA</h1>
+      <div class="cover-desc">
+        Master's degree student in Architecture at the University of Florence (UNIFI) and Erasmus student at NTUA Athens.
+      </div>
     </div>
   </div>
-</div>
-</div>
-    <!-- DESCRIZIONE -->
-    <div class="glass-box">
+  <!-- DESCRIZIONE -->
+  <div class="glass-box">
+    <div class="about-desc-wrap">
       <p style="font-size:1.36em;">
-        <!-- Sostituisci qui sotto con il testo di presentazione che vuoi -->
-        Welcome to my website! This site showcases projects, visual experiments, and research related to generative graphics, creative coding, and computational design.  
-        <br><br>
-        I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.
-        <br><br>
-        <b>On this site you will find:</b>
-        <ul style="text-align:left; max-width:560px; margin:20px auto 0 auto;">
-          <li>Generative sketches written in p5.js</li>
-          <li>Analyses and commentary on creative processes</li>
-          <li>Small galleries of images/gifs</li>
-          <li>Downloadable PDFs and materials</li>
-          <li>Useful links and contacts</li> </ul>
-        </ul>
-        <br>
-        If you want to know more, <b>get in touch!</b>
+        Welcome to my website! This site showcases projects, visual experiments, and research related to generative graphics, creative coding, and computational design.<br><br>
+        I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.<br><br>
+        <b>Su questo sito trovi:</b>
       </p>
+      <ul>
+        <li>Generative sketches written in p5.js</li>
+        <li>Analyses and commentary on creative processes</li>
+        <li>Small galleries of images/gifs</li>
+        <li>Downloadable PDFs and materials</li>
+        <li>Useful links and contacts</li>
+      </ul>
+      <br>
+      <p>If you want to know more, <b>get in touch!</b></p>
     </div>
   </div>
+</div>
+
 
   <div class="row one-bottom center">
     <p>©ARMAND LALA 2025</p>
   </div>
+</div>
   
   <!-- Al fondo di about.html -->
 <script src="js/p5.js"></script>
