--- a/about.html
+++ b/about.html
@@ -12,59 +12,57 @@
 </head>
 <body>
   <!-- NAVBAR START -->
-<nav class="navbar">
-  <div class="navbar-left">
-    <a href="index.html" class="navbar-home" title="Home">
-      <!-- Casetta in SVG: puoi cambiare la dimensione (width/height) -->
-      <svg width="24" height="24" fill="white" viewBox="0 0 24 24" style="vertical-align: middle;">
-        <path d="M3 11l9-9 9 9h-2v8a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-8H3z" stroke="white" stroke-width="2" fill="none"/>
-      </svg>
-    </a>
-  </div>
- <div class="navbar-right">
-  <a href="about.html">ABOUT</a>
-  <a href="contacts.html">CONTACTS</a>
-  <div class="dropdown">
-  <a href="#" class="dropbtn">PROJECTS</a>
-  <div class="dropdown-content">
-    <a href="project1.html">OPULENT TILING</a>
-    <a href="project2.html">▲ ◼</a>
-    <a href="project3.html">MAZE</a>
-    <a href="project4.html">▲ ◼ ⏺</a>
-    <a href="project5.html">URBAN MYCELIUM</a>
-    <a href="project6.html">HYPNO SPIRAL</a>
-    <a href="project7.html">SUNFLOWER</a>
-    <a href="project8.html">LOCATION OF A CIRCLE</a>
-    <a href="project9.html">DYNAMIC QUAD-SPLIT METER</a>
-  </div>
-</div>
-
-</div>
-
-</nav>
-<!-- NAVBAR END -->
+  <nav class="navbar">
+    <div class="navbar-left">
+      <a href="index.html" class="navbar-home" title="Home">
+        <!-- Casetta in SVG -->
+        <svg width="24" height="24" fill="white" viewBox="0 0 24 24" style="vertical-align: middle;">
+          <path d="M3 11l9-9 9 9h-2v8a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-4h-2v4a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2v-8H3z" stroke="white" stroke-width="2" fill="none"/>
+        </svg>
+      </a>
+    </div>
+    <div class="navbar-right">
+      <a href="about.html">ABOUT</a>
+      <a href="contacts.html">CONTACTS</a>
+      <div class="dropdown">
+        <a href="#" class="dropbtn">PROJECTS</a>
+        <div class="dropdown-content">
+          <a href="project1.html">OPULENT TILING</a>
+          <a href="project2.html">▲ ◼</a>
+          <a href="project3.html">MAZE</a>
+          <a href="project4.html">▲ ◼ ⏺</a>
+          <a href="project5.html">URBAN MYCELIUM</a>
+          <a href="project6.html">HYPNO SPIRAL</a>
+          <a href="project7.html">SUNFLOWER</a>
+          <a href="project8.html">LOCATION OF A CIRCLE</a>
+          <a href="project9.html">DYNAMIC QUAD-SPLIT METER</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!-- NAVBAR END -->
   
   <div class="project-glass-wrapper">
     <!-- COPERTINA -->
-   <div class="project-glass-wrapper">
-  <!-- COPERTINA -->
-  <div class="glass-box cover-flex">
-    <div class="cover-svg-wrap">
-      <img src="images/portrait_me.svg" alt="Armand Lala Portrait" class="cover-svg-img">
-    </div>
-    <div class="cover-text-col">
-      <h1 class="cover-title">ARMAND LALA</h1>
-      <div class="cover-desc">
-        Master's degree student in Architecture at the University of Florence (UNIFI) and Erasmus student at NTUA Athens.
+    <div class="glass-box about-cover-flex">
+      <div class="about-svg-wrap">
+        <img src="images/portrait_me.svg" alt="Armand Lala Portrait" class="about-svg-big">
+      </div>
+      <div class="about-cover-text">
+        <h1 class="cover-title">ARMAND LALA</h1>
+        <div class="cover-desc">
+          Master's degree student in Architecture at the University of Florence (UNIFI) and Erasmus student at NTUA Athens.
+        </div>
       </div>
     </div>
-  </div>
-  <!-- DESCRIZIONE -->
-  <div class="glass-box">
-    <div class="about-desc-wrap">
-      <p style="font-size:1.36em;">
-        Welcome to my website! This site showcases projects, visual experiments, and research related to generative graphics, creative coding, and computational design.<br><br>
-        I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.<br><br>
+
+    <!-- DESCRIZIONE CENTRATA -->
+    <div class="glass-box about-desc-wrap">
+      <p>
+        Welcome to my website! This site showcases projects, visual experiments, and research related to generative graphics, creative coding, and computational design.
+        <br><br>
+        I'm <b>Armand Lala</b> and this is my space to explore algorithms, visual patterns, and the intersections between digital art, coding, and geometry.
+        <br><br>
         <b>Su questo sito trovi:</b>
       </p>
       <ul>
@@ -74,23 +72,19 @@
         <li>Downloadable PDFs and materials</li>
         <li>Useful links and contacts</li>
       </ul>
-      <br>
-      <p>If you want to know more, <b>get in touch!</b></p>
+      <p style="margin-top:30px">If you want to know more, <b>get in touch!</b></p>
     </div>
   </div>
-</div>
-
 
   <div class="row one-bottom center">
     <p>©ARMAND LALA 2025</p>
   </div>
-</div>
-  
-  <!-- Al fondo di about.html -->
-<script src="js/p5.js"></script>
-<script src="js/p5.sound.min.js"></script>
-<script src="js/mold.js"></script>
-<script src="js/sketch.js"></script>
 
+  <!-- Scripts -->
+  <script src="js/p5.js"></script>
+  <script src="js/p5.sound.min.js"></script>
+  <script src="js/mold.js"></script>
+  <script src="js/sketch.js"></script>
 </body>
 </html>
+
